# ordertogether

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  ordertogether.db  pyproject.toml
backend/core/: config.py  database.py  deps.py  lifecycle.py  security.py  seed.py
backend/models/: activity.py  base.py  comment.py  delivery_service.py  invite.py  notification.py  order.py  poll.py  receipt.py  user.py
backend/routers/: activities.py  admin.py  auth.py  config.py  notifications.py  orders.py  polls.py  services.py  users.py
backend/schemas/: activity.py  auth.py  comment.py  notification.py  order.py  poll.py  receipt.py  service.py  user.py
backend/services/: auth_service.py  ldap_service.py  notification_service.py  order_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/Avatar/: Avatar.jsx
frontend/src/components/Button/: Button.css  Button.jsx
frontend/src/components/CountdownTimer/: CountdownTimer.jsx
frontend/src/components/EmptyState/: EmptyState.css  EmptyState.jsx
frontend/src/components/Modal/: Modal.css  Modal.jsx
frontend/src/components/Navbar/: Navbar.css  Navbar.jsx
frontend/src/components/OrderCard/: OrderCard.css  OrderCard.jsx
frontend/src/components/QRModal/: QRModal.css  QRModal.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: auth.css
frontend/src/services/: api.js
frontend/src/utils/: date.js  getIcon.js
(+25 files in other folders)
